--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "wwebjs-aws-s3",
-  "version": "1.0.1",
-  "description": "An AWS S3 plugin for remote authentication on whatsapp-web.js",
+  "version": "1.0.2",
+  "description": "A plugin for remote authentication on whatsapp-web.js and store session data on AWS S3.",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
