--- a/example/package.json
+++ b/example/package.json
@@ -11,6 +11,6 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.369.0",
     "qrcode-terminal": "^0.12.0",
-    "whatsapp-web.js": "^1.21.0"
+    "whatsapp-web.js": "github:pedroslopez/whatsapp-web.js#webpack-exodus"
   }
 }
